Fix(Spacing): Fix spacing between top search and icons

--- a/application/front/css/vitoop.scss
+++ b/application/front/css/vitoop.scss
@@ -1458,7 +1458,7 @@ input.divider {
     #vtp-search-bytags-taglist {
         height: 20px;
         margin-right: 0px;
-        width: 265px;
+        width: 261px;
         padding-left: 15px;
         margin-left: -50px;
     }
@@ -1479,6 +1479,7 @@ input.divider {
 
     #vtp-search-bytags-tagcnt-button {
         margin-right: 0px;
+        margin-left: 4px;
     }
 
 
